--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,26 @@
-spring.application.name=sreviceDeStage
+spring:
+  profiles:
+    active: dev
+  servlet:
+    multipart:
+      max-file-size: 50MB
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: nourichadi70@gmail.com
+    password: snuo vpkw hfne zmvb
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
+
+server:
+  servlet:
+    context-path: /api
+
+
+
+
